riad-booking-platform_backend/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  labels:
    app: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.riad-booking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-api-gateway
                port:
                  number: 80
